' Generated by UML Generator
' Encoded: xLZPSjis57tNLw1sMykrdR7ik7OqRHfvKPB6ILFBJhfCsm59Y4H50Wm0IbOSvzjx090IgMMcxLCUyc2P8i-zkCkv1uIUQ4ELARAqfKTSv5JHZ8GfrRfdZE91OTZpK8e1Vy_8VYlX4ICXLs7AMYs78g_nCP4gkgO1kMiHifbHBiwe65FT9MSobOfyJmIR-Els_kr-ltDyqDksK3WsG3Er1jgvE7XqUEgW2AqmVSxIQ8tNqqxdODz10qJ3rA08JCfMWmyF7tQEZXmuLpoZQdhDRirgRF-at-kVEMo6OaJhaOyUzWvFJtm8XJ5IzCAGYJNW_QFZWmllDb1KHCzudAJuMmC_F3azxtlV4TD65Q7XOxOkukFESSTYFyOCnQM6YzYsgJjhretXgIxDgdjjPv7Ac8ikkRJ_Ie2xTa_tzl2nK-iuxjwtMbmOfeOqP0l-BHq-vhZrr8V1sjjTCW2hH5mzmJScOfFq14sdxvbgvovE3sgW3SzhvlUBzFEBQHOMYflfDSzdNf357TcuqOnGKWZ-hc0ahuo6A1uRCpKbD0nb8So3ZLsoqHjB7f52M-CSv9G8Zd01S8PQIe7hcGljB9ntGr96jI6T0n8ccACGLT5k2JHCMbyDcpEP1U0-ANAi4LBDTaag9zMbAB80vhi4t21wcWKozMQlRBn4iG9BceGHJRDQGZHK4bMPi41pmyg54YfYHdYMIsMeCFCuR7PSHZoaQJfrs7D9X3H48tv6fh9GDV24cmJXJALWjJA5CijahHuavID6jZe7Xm-FljqYo7whUhRbp0P6Blj6HIa1hJKcR9vDHWMDcN9c5u86ALAUo3rG3Ju8BP2_C8ZUDMM2BwusT4nvQi6DZEYOrTQp4HT1oaCRFvG5fVOvfHCwHGuo9h8mX0xnf6I2gqb48ZRcOLdPKuWXek2oWCSXoHEk4mjbq43mdrf5ZHq3cgr_Wx8FfrMNoCtLfIO16zgwC3jBrieLACIADaLQDhzC9aJW8w8BdVFGBPvoCGBLbCn0yP6G4q4qxAiuR_88quVrwAXM0we1GY7mFmTfU5MnIt2LrPjZkU2L13GXcGtJ3HfRcfPbGjhaSJ5oF9uDKpbjFheNZEK-NPcNQWN6WmcPCmgKd6ZR1PT4L1i2pKHK2zCaIXPnugjlYPSnhMbitT4yrsLkA9mlRTbtnnixkMCBv0O5fCR0SxcK7Mqhq393xgMUilgoRi2PG2UXoCtChi0L2AXRpn8mgZSKCnmNALNLvB6KeKTr0EpGRf3HzGC3NyjzeYnpQiEPCBH5eW7Gd90A0YdYY7Z8KIFSpNolbcQB92pDmLuLKs7t-An8eRGfMwBUO47347vKX5w35DSZEm0e7MPIAZYoKWJwwHf5SbZmqBWnpcsDbQZKuXrqpqozMj0WX7XuhRZ6E8qmyvYufG5f37F5-eRm3ShTWBXNd5B0OYbh2fFGWDjcaNkxVTW-TycLwtQv-ValVlTpIbtRLZPwfsVd5_sdpvx_-EBovQkVNlzyDRY-UVFsbrz_sx1u9-TrF5ABs31E-D-ZD1CoVwUqASQJs-bxXozblcxnyOidcrz-zUVNtxIt_zgvk__G_Uxn3mwB_Q41z7fxVF9eVsEsKQ_TUdV-qzQxqznwSUCE1ONktaCJ-R1y9shxQMCLRfUCsBGBOJShTkstQCBq3GNNtBuzTsXV7jjKnRD0Vly3vfO-SsF_Rh9e1xrGrSj0BLPV2So_Vul9NZUJ3AJ4w0kB2Tqs-RBXgBtQxwwbHjtJBkH43BbQT3ylcM8qcljkLqdXYPlaQzddALkpt585pceYuTwvnxQKNT9JYaulkJRVUSF7imBKB1oNTsWKrUz1NDGh2FSy8Sk6jusSxM2jp2rcPe3BbDKzGdVOxM8604TEvrOWFLCgc5VxMHyQtdQj5Ygn5Ewgcjd6pjSwizeCgc-xvHQh_p-AKAsHIXevFhUNKkrZL_QFCBEDD6VzV5hmEQa_7w0-eGFKlpWELStpPo7VKDVlpoVYJw-XcpKnw3PqjBHOqCdDkQxCJfehZisU2LNNwqmufpe992qFg9-fyEbGmVTirX_VjFglMN9lh_c3HkFftjvZBmMpk-J1Wm-F5oncoZw7pxJ1-g_nRVx0OYithISuYXHP-Wy
' URL: http://www.plantuml.com/plantuml/uml/xLZPSjis57tNLw1sMykrdR7ik7OqRHfvKPB6ILFBJhfCsm59Y4H50Wm0IbOSvzjx090IgMMcxLCUyc2P8i-zkCkv1uIUQ4ELARAqfKTSv5JHZ8GfrRfdZE91OTZpK8e1Vy_8VYlX4ICXLs7AMYs78g_nCP4gkgO1kMiHifbHBiwe65FT9MSobOfyJmIR-Els_kr-ltDyqDksK3WsG3Er1jgvE7XqUEgW2AqmVSxIQ8tNqqxdODz10qJ3rA08JCfMWmyF7tQEZXmuLpoZQdhDRirgRF-at-kVEMo6OaJhaOyUzWvFJtm8XJ5IzCAGYJNW_QFZWmllDb1KHCzudAJuMmC_F3azxtlV4TD65Q7XOxOkukFESSTYFyOCnQM6YzYsgJjhretXgIxDgdjjPv7Ac8ikkRJ_Ie2xTa_tzl2nK-iuxjwtMbmOfeOqP0l-BHq-vhZrr8V1sjjTCW2hH5mzmJScOfFq14sdxvbgvovE3sgW3SzhvlUBzFEBQHOMYflfDSzdNf357TcuqOnGKWZ-hc0ahuo6A1uRCpKbD0nb8So3ZLsoqHjB7f52M-CSv9G8Zd01S8PQIe7hcGljB9ntGr96jI6T0n8ccACGLT5k2JHCMbyDcpEP1U0-ANAi4LBDTaag9zMbAB80vhi4t21wcWKozMQlRBn4iG9BceGHJRDQGZHK4bMPi41pmyg54YfYHdYMIsMeCFCuR7PSHZoaQJfrs7D9X3H48tv6fh9GDV24cmJXJALWjJA5CijahHuavID6jZe7Xm-FljqYo7whUhRbp0P6Blj6HIa1hJKcR9vDHWMDcN9c5u86ALAUo3rG3Ju8BP2_C8ZUDMM2BwusT4nvQi6DZEYOrTQp4HT1oaCRFvG5fVOvfHCwHGuo9h8mX0xnf6I2gqb48ZRcOLdPKuWXek2oWCSXoHEk4mjbq43mdrf5ZHq3cgr_Wx8FfrMNoCtLfIO16zgwC3jBrieLACIADaLQDhzC9aJW8w8BdVFGBPvoCGBLbCn0yP6G4q4qxAiuR_88quVrwAXM0we1GY7mFmTfU5MnIt2LrPjZkU2L13GXcGtJ3HfRcfPbGjhaSJ5oF9uDKpbjFheNZEK-NPcNQWN6WmcPCmgKd6ZR1PT4L1i2pKHK2zCaIXPnugjlYPSnhMbitT4yrsLkA9mlRTbtnnixkMCBv0O5fCR0SxcK7Mqhq393xgMUilgoRi2PG2UXoCtChi0L2AXRpn8mgZSKCnmNALNLvB6KeKTr0EpGRf3HzGC3NyjzeYnpQiEPCBH5eW7Gd90A0YdYY7Z8KIFSpNolbcQB92pDmLuLKs7t-An8eRGfMwBUO47347vKX5w35DSZEm0e7MPIAZYoKWJwwHf5SbZmqBWnpcsDbQZKuXrqpqozMj0WX7XuhRZ6E8qmyvYufG5f37F5-eRm3ShTWBXNd5B0OYbh2fFGWDjcaNkxVTW-TycLwtQv-ValVlTpIbtRLZPwfsVd5_sdpvx_-EBovQkVNlzyDRY-UVFsbrz_sx1u9-TrF5ABs31E-D-ZD1CoVwUqASQJs-bxXozblcxnyOidcrz-zUVNtxIt_zgvk__G_Uxn3mwB_Q41z7fxVF9eVsEsKQ_TUdV-qzQxqznwSUCE1ONktaCJ-R1y9shxQMCLRfUCsBGBOJShTkstQCBq3GNNtBuzTsXV7jjKnRD0Vly3vfO-SsF_Rh9e1xrGrSj0BLPV2So_Vul9NZUJ3AJ4w0kB2Tqs-RBXgBtQxwwbHjtJBkH43BbQT3ylcM8qcljkLqdXYPlaQzddALkpt585pceYuTwvnxQKNT9JYaulkJRVUSF7imBKB1oNTsWKrUz1NDGh2FSy8Sk6jusSxM2jp2rcPe3BbDKzGdVOxM8604TEvrOWFLCgc5VxMHyQtdQj5Ygn5Ewgcjd6pjSwizeCgc-xvHQh_p-AKAsHIXevFhUNKkrZL_QFCBEDD6VzV5hmEQa_7w0-eGFKlpWELStpPo7VKDVlpoVYJw-XcpKnw3PqjBHOqCdDkQxCJfehZisU2LNNwqmufpe992qFg9-fyEbGmVTirX_VjFglMN9lh_c3HkFftjvZBmMpk-J1Wm-F5oncoZw7pxJ1-g_nRVx0OYithISuYXHP-Wy
' Generated on: 2026-07-23T09:50:55.333163949

@startuml
skinparam classAttributeIconSize 0
hide circle

class PasswordTab {
  #mainCanvas: Color = new Color(0x0F172A)
  #containers: Color = new Color(0x1E293B)
  #inputField: Color = new Color(0x0B1120)
  #borderSubtle: Color = new Color(0x334155)
  #primaryText: Color = new Color(0xF8FAFC)
  #mutedText: Color = new Color(0x94A3B8)
  #buttonAccent: Color = new Color(0x0572EC)
  #brandHighlight: Color = new Color(0x38BDF8)
  #destructive: Color = new Color(0xF87171)
  ~generatingPass: PasswordUtils = new Password()
  ~login: Login = new Login()
  --
  +PasswordTab()
}

interface PasswordUtils {
  ~passGenerate(): String
  ~passStrengthAnalyzer(pass: String): String
  ~tip(): String
}

class Password {
  ~securityTips: String = { "Use a unique password for every account.", "Avoid using personal information in passwords.", "Use at least 12 characters for strong passwords.", "Combine uppercase, lowercase, numbers, and symbols.", "Never reuse the same password across websites.", "Change important passwords periodically.", "Do not share your passwords with anyone.", "Avoid common passwords like '123456' or 'password'.", "Store your passwords in a trusted password manager.", "Enable two-factor authentication whenever available.", "Do not save passwords on public computers.", "Always log out after using shared devices.", "Be cautious of phishing emails asking for passwords.", "Verify website URLs before entering your credentials.", "Do not click suspicious links from unknown sources.", "Update weak passwords as soon as possible.", "Longer passwords are generally more secure.", "Avoid using the same password for work and personal accounts.", "Keep your operating system and browser updated.", "Never send passwords through email or messaging apps.", "Lock your computer when leaving it unattended.", "Use randomly generated passwords for sensitive accounts.", "Review your saved credentials regularly.", "Delete credentials you no longer use.", "Never write passwords where others can easily find them.", "A password manager helps organize multiple credentials.", "Strong passwords reduce the risk of unauthorized access.", "Avoid predictable patterns like 'qwerty' or 'abc123'.", "Think twice before entering passwords on unknown websites.", "Security starts with good password habits." }
  ~rand: Random = new Random()
  -upper: String = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
  -lower: String = "abcdefghijklmnopqrstuvwxyz"
  -symbols: String = "~!@#$%^&*()_+{}|:<>?"
  -nums: String = "1234567890"
  --
  +passGenerate(): String
  +passStrengthAnalyzer(pass: String): String
  +tip(): String
  +{static} shiftedText(message: String, key: int): String
}

class WoodyVault {
  +{static} main(args: String[]): void
}

class Login {
  +{static} masterPassword: String
  --
  +appLogin(mPass: String): boolean
  +changeMasterPassword(masterPassword: String, newPass: String, confirmPass: String): String
  +readMasterPass(): void
  +writeToFile(masterPassword: String): void
}

class Credentials {
  #vault: ArrayList<String>
  --
  +Credentials()
  +addCredentials(userName: String, passWord: String, site: String): String
  +getSingleCredentials(index: String): void
  +deleteCredentials(index: int): void
  +updatePassword(index: String, username: String, password: String): void
  +credentialsCounter(): int
  +writeToFile(userName: String, passWord: String, site: String): void
  +loadVault(): void
  +deleteFromVault(num: int): void
}

class GuiLogin {
  #mainCanvas: Color = new Color(0x0F172A)
  #containers: Color = new Color(0x1E293B)
  #inputField: Color = new Color(0x0B1120)
  #borderSubtle: Color = new Color(0x334155)
  #primaryText: Color = new Color(0xF8FAFC)
  #mutedText: Color = new Color(0x94A3B8)
  #buttonAccent: Color = new Color(0x0572EC)
  #brandHighlight: Color = new Color(0x38BDF8)
  #destructive: Color = new Color(0xF87171)
  ~login: Login = new Login()
  --
  +GuiLogin()
}

class VaultTab {
  #mainCanvas: Color = new Color(0x0F172A)
  #containers: Color = new Color(0x1E293B)
  #inputField: Color = new Color(0x0B1120)
  #borderSubtle: Color = new Color(0x334155)
  #primaryText: Color = new Color(0xF8FAFC)
  #mutedText: Color = new Color(0x94A3B8)
  #buttonAccent: Color = new Color(0x0572EC)
  #brandHighlight: Color = new Color(0x38BDF8)
  #destructive: Color = new Color(0xF87171)
  #credentials: Credentials = new Credentials()
  #password: Password = new Password()
  --
  +VaultTab()
}

class Dashboard {
  #mainCanvas: Color = new Color(0x0F172A)
  #containers: Color = new Color(0x1E293B)
  #inputField: Color = new Color(0x0B1120)
  #borderSubtle: Color = new Color(0x334155)
  #primaryText: Color = new Color(0xF8FAFC)
  #mutedText: Color = new Color(0x94A3B8)
  #buttonAccent: Color = new Color(0x0572EC)
  #brandHighlight: Color = new Color(0x38BDF8)
  #destructive: Color = new Color(0xF87171)
  --
  +Dashboard()
}

PasswordTab o-- PasswordUtils
PasswordTab --> Login
Password ..|> PasswordUtils
GuiLogin --> Login
VaultTab o-- Credentials
VaultTab --> Password
@enduml